@@ -38,6 +38,15 @@
 	      <target>1.6</target>
 		</configuration>
 	  </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.11</version>
+        <configuration>
+            <argLine>-Xmx1g -XX:MaxPermSize=256m</argLine>
+            <forkmode>always</forkmode>
+        </configuration>
+      </plugin>
   	</plugins>
   </build>
 </project>
